--- a/src/todolist-tracker/TodoTrackerPage.css
+++ b/src/todolist-tracker/TodoTrackerPage.css
@@ -6,6 +6,20 @@
   margin: 10px 0;
   background: lightsteelblue;
   padding: 5px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto 25px 25px;
+  grid-gap: 10px;
+  align-items: center;
+}
+
+.TodoTrackerPage li h2{
+  font-weight: bolder;
+}
+
+.TodoTrackerPage li .delete{
+  color:white;
+  background-color: red;
+  font-weight: bold;
+  border: 1px solid red;
+  cursor: pointer; 
 }
