--- a/src/todolist-tracker/TodoTrackerPage.css
+++ b/src/todolist-tracker/TodoTrackerPage.css
@@ -1,25 +1,43 @@
 .TodoTrackerPage {
   padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.TodoTrackerPage .input-box {
+  background-color: rgb(255, 204, 0);
+  width: 200px;
+  height: 30px;
+  border-width: 0px;
+  border: none;
+  text-align: center;
 }
 
 .TodoTrackerPage li {
   margin: 10px 0;
-  background: lightsteelblue;
+  background: rgb(145, 180, 227);
   padding: 5px;
   display: grid;
   grid-template-columns: 1fr auto 25px 25px;
   grid-gap: 10px;
   align-items: center;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px 2px;
+  margin: 20px;
+  width: 300px;
+}
+
+.TodoTrackerPage li:hover {
+  color: yellow
 }
 
 .TodoTrackerPage li h2{
   font-weight: bolder;
 }
 
-.TodoTrackerPage li .delete{
-  color:white;
-  background-color: red;
-  font-weight: bold;
-  border: 1px solid red;
-  cursor: pointer; 
+.TodoTrackerPage li input:checked {
+  text-decoration: line-through;
+  background-color: rgb(249, 249, 150);
 }
